--- a/MobileAcademy2/app/src/main/AndroidManifest.xml
+++ b/MobileAcademy2/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.lexu.mobileacademy2">
+
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -16,6 +17,16 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".QuotesActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <activity android:name=".QuoteDetailsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".QuotesActivity"/>
         </activity>
     </application>
 
