--- a/MobileAcademy3/app/src/main/AndroidManifest.xml
+++ b/MobileAcademy3/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.lexu.mobileacademy3">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,6 +24,11 @@
             android:enabled="true"
             android:exported="true">
         </service>
+
+        <activity android:name=".ArticleDetailsActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                       android:value=".MainActivity"/>
+        </activity>
     </application>
 
 </manifest>
