--- a/MobileAcademy3/app/src/main/AndroidManifest.xml
+++ b/MobileAcademy3/app/src/main/AndroidManifest.xml
@@ -18,8 +18,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-            <meta-data android:name="android.app.searchable"
-                       android:resource="@xml/searchable_config"/>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable_config"/>
         </activity>
 
         <service
@@ -27,8 +29,18 @@
             android:enabled="true"
             android:exported="true">
         </service>
+        <service
+            android:name=".services.GetInstalledAppsService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
 
         <activity android:name=".ArticleDetailsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <activity android:name=".InfoActivity">
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                        android:value=".MainActivity"/>
         </activity>
